--- a/index.html
+++ b/index.html
@@ -11,50 +11,51 @@
 <div class="container">
 	<div class="header">
 		<div class="header_inner">
-			<div class="logo">
-				<h1 class="hd1"><img src="img/logo.png"></h1>
+			<div class="titset">
+				<img src="img/logo.png">
 			</div>
-			<div class="nav">
-				<ul class="navlist">
-				  <li><a href="#">
-				  	<img src="img/menu.png">
-				  </a></li>
-				  <li><a href="#">menu</a></li>
-				  <li><a href="#">menu</a></li>
-				</ul>
-			</div>
+			 <div class="nav">
+				<ul style="font-family:''바탕'">
+						<li><a href="#">menu</a></li>
+						<li><a href="#">menu</a></li>
+						<li><a href="#">menu</a></li>
+						<li><a href="#">menu</a></li>
+						<li><a href="#">menu</a></li>
+						<li><a href="#">menu</a></li>
+					</ul>
+			 </div>
 		</div>
 	</div>
 	<div class="mainpng">
 		<div class="cartoonbox">
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg01.png">
+					<img src="img/firstgif.gif">
 				</div>			
 			</div>
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg02.png">
+					<img src="img/secgif.gif">
 				</div>
 			</div>				
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg03.png">
+					<img src="img/thigif.gif">
 				</div>
 			</div>				
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg04.png">
+					<img src="img/fougif.gif">
 				</div>
 			</div>				
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg05.png">
+					<img src="img/fitgif.gif">
 				</div>
 			</div>				
 			<div class="box">
 				<div class="simg">
-					<img src="img/vimg06.png">
+					<img src="img/sixgif.gif">
 				</div>
 			</div>				
 			
@@ -71,20 +72,20 @@
 							<img src="img/simg01.png" alt="">
 						</span>
 						<span class="stxt">
-						introduce
+						
 						</span>
 					</a>
 					<a href="javascript:void(0)">
 						<span class="simg">
 							<img src="img/simg02.png" alt="">
 						</span>
-						<span class="stxt">introduce</span>
+						<span class="stxt"></span>
 					</a>
 					<a href="javascript:void(0)">
 						<span class="simg">
 							<img src="img/simg03.png" alt="">
 						</span>
-						<span class="stxt">introduce</span>
+						<span class="stxt"></span>
 					</a>					
 				</div>
 			</div>
