--- a/link/source02/index.html
+++ b/link/source02/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>chapter02</title>
+<title>플라잉타이거</title>
 <link rel="stylesheet" href="css/reset.css" type="text/css">
 <link rel="stylesheet" href="css/css01.css" type="text/css">
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -60,7 +60,7 @@
 					<span class="simg">
 						<img src="img/secondright.png" alt="">
 					</span>
-					<span class="leftbtn" style="left:390px">매장찾기</span>
+					<span class="leftbtn" style="left:453px">매장찾기</span>
 					</a>
 				
 			</div>
