--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<img src="img/simg01.png" alt="">
 						</span>
 						<div class="btnset">
-							<a href="javascript:void(0)" class="btn view" target="_blank">detail view</a>
+							<a href="file:///C:/Users/ATIV/Documents/GitHub/website/link/source01/index.html" class="btn view" target="_blank">detail view</a>
 						</div>
 					</div>
 					<div class="intbox">
@@ -81,7 +81,7 @@
 						</span>
 							<div class="btnset">
 								<a href="javascript:void(0)" class="btn view"  onclick="lypop(event, this)"  data-num="1">detail view</a>
-								<a href="javascript:void(0)" class="btn link" target="_blank">link</a>
+								<a href="file:///C:/Users/ATIV/Documents/GitHub/website/link/source02/index.html" class="btn link" target="_blank">link</a>
 							</div>
 					</div>
 					<div class="intbox">
@@ -90,7 +90,7 @@
 						</span>
 						<div class="btnset">
 							<a href="javascript:void(0)" class="btn view"  onclick="lypop(event, this)"  data-num="2">detail view</a>
-							<a href="javascript:void(0)" class="btn link" target="_blank">link</a>
+							<a href="file:///C:/Users/ATIV/Documents/GitHub/website/link/source03/index.html" class="btn link" target="_blank">link</a>
 						</div>
 					</div>					
 				</div>
